FIX: less repeated code, FIX: z-index personal-info & @media resizing

--- a/src/app/modules/components/personal-info/personal-info.component.scss
+++ b/src/app/modules/components/personal-info/personal-info.component.scss
@@ -3,18 +3,21 @@
   bottom: 0;
   left: 0;
   width: max-content;
-  z-index: 1;
+  z-index: 2;
+  width: 50%;
+  transition: all 300ms;
   .main-wrapped {
     display: flex;
     flex-direction: column;
     height: 100%;
     width: 100%;
-    padding: 3vh 5vw;
+    padding: 3vh 0vw 3vh 5vw;
     background-color: transparent;
     .info-container {
-      width: 50%;
+      width: 100%;
+      transition: all 300ms;
       .name {
-        transition: 300ms;
+        transition: all 300ms;
         font-family: "ArchivoBlack";
         font-size: 3rem;
         line-height: 1;
@@ -45,6 +48,8 @@
         -webkit-background-clip: text;
       }
       .description {
+        transition: all 300ms;
+
         font-family: "ArchivoBlack";
         line-height: 0.85;
         font-size: 2.5rem;
@@ -52,27 +57,28 @@
         -webkit-text-stroke: 1px #c6c6c6;
         background-color: inherit;
         animation: 1.5s move ease-in-out;
-
       }
       .sub-description {
+        transition: all 300ms;
+
         font-size: 1rem;
         margin: 2.25rem 0 2.75rem 0;
         font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
           "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
         color: #dbdbdb;
         animation: 1.5s move ease-in;
-
       }
     }
 
     .links {
+      transition: all 300ms;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       grid-gap: 50px;
       animation: 1.75s move ease-out;
-
       a {
+        transition: all 300ms;
         width: auto;
         text-decoration: none;
         display: flex;
@@ -87,34 +93,48 @@
     }
   }
 }
-button {
-  z-index: 999999;
-  cursor: pointer !important;
-  position: fixed;
-  top: 5vh;
-  left: 3vw;
-  z-index: 0;
-  border: 2px solid #c6c6c6;
-  color: #c6c6c6;
-  border-radius: 5px;
-  padding: 10px;
-  font-family: "ArchivoBlack";
-  background-color: transparent;
-  transition: all 300ms;
-  &:hover {
-    color: inherit;
-    background-color: #c6c6c6;
-  }
-}
+// button {
+//   z-index: 999999;
+//   cursor: pointer !important;
+//   position: fixed;
+//   top: 5vh;
+//   left: 3vw;
+//   z-index: 0;
+//   border: 2px solid #c6c6c6;
+//   color: #c6c6c6;
+//   border-radius: 5px;
+//   padding: 10px;
+//   font-family: "ArchivoBlack";
+//   background-color: transparent;
+//   transition: all 300ms;
+//   &:hover {
+//     color: inherit;
+//     background-color: #c6c6c6;
+//   }
+// }
 
 @media (max-width: 1440px) {
-  .main-wrapped {
-    .info-container {
-      width: 35% !important;
+  .info-container {
+    .name {
+      font-size: 2.5rem !important;
     }
-    .name p {
-      font-size: 3rem !important;
+    .description {
+      font-size: 2rem !important;
     }
+    .sub-description {
+      font-size: .9rem !important;
+    }
+  }
+  .links {
+    grid-gap: 15px !important;
+    a{
+      font-size: .8rem !important;
+    }
+  }
+}
+@media (max-width: 1240px) {
+  .main{
+    width: 45% !important;
   }
 }
 @media (max-width: 1024px) {
